--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 ---
 layout: "base.html"
-description: "Junk Force Michigan - Reliable Junk Removal & Hauling Services in Michigan"
-metaTitle: "Junk Force Michigan | Junk Removal & Hauling Services in Michigan"
-tagTitle: "Junk Force Michigan"
+description: "Michigan Fencing Solutions - Professional Fence Installation, Repair, and Gate Solutions in Kalamazoo, MI"
+metaTitle: "Michigan Fencing Solutions | Fence Installation & Repair in Kalamazoo, MI"
+tagTitle: "Michigan Fencing Solutions"
 preloadImg: "/images/landing.png"
 preloadCSS: "/css/local.css"
 permalink: "/"
@@ -17,41 +17,25 @@ eleventyNavigation:
 
 <section id="hero">
   <video autoplay muted loop playsinline class="cs-picture">
-    <source
-      src="/images/hero_vid.mov"
-      type="video/mp4"
-      autoplay
-      muted
-      loop
-      playsinline
-    />
+    <source src="/images/hero_vid.mov" type="video/mp4" autoplay muted loop playsinline />
     Your browser does not support the video tag.
   </video>
   <div class="cs-overlay"></div>
   <div class="cs-container">
     <div class="cs-flex-group">
-      <span class="cs-topper">Same-Day. Affordable. Family-Owned.</span>
+      <span class="cs-topper">Locally Owned. Experienced. Reliable.</span>
       <h1 class="cs-title">
-        Junk Removal You Can Count On
+        Fencing Solutions Built to Last
       </h1>
       <p class="cs-text">
-        At Junk Force Michigan, we provide fast, reliable, and eco-friendly junk removal
-        services for homes and businesses across Michigan. From furniture hauling to appliance
-        disposal, yard waste cleanup to full estate cleanouts — we make decluttering simple, stress-free, and affordable.
+        At Michigan Fencing Solutions, we deliver high-quality fence installation, repair, and gate services to enhance
+        your property’s security and beauty. Serving Kalamazoo and surrounding areas, we combine skilled craftsmanship
+        with durable materials for results that stand the test of time.
       </p>
-      <a href="/junk-removal/" class="cs-button-solid"
-        >Explore Services</a
-      >
+      <a href="/services/" class="cs-button-solid">Explore Services</a>
       <a href="/about/" class="cs-button-transparent">
-        <img
-          class="cs-img"
-          loading="lazy"
-          decoding="async"
-          src="https://csimg.nyc3.digitaloceanspaces.com/Hero/play.svg"
-          alt="play icon"
-          width="17"
-          height="17"
-        />
+        <img class="cs-img" loading="lazy" decoding="async"
+          src="https://csimg.nyc3.digitaloceanspaces.com/Hero/play.svg" alt="play icon" width="17" height="17" />
         Learn More
       </a>
     </div>
@@ -65,50 +49,32 @@ eleventyNavigation:
 <section id="services" class="services">
   <div class="card">
     <picture>
-      <img
-        aria-hidden="true"
-        decoding="async"
-        src="/assets/svgs/service_1.svg"
-        alt="junk removal icon"
-        width="48"
-        height="48"
-      />
+      <img aria-hidden="true" decoding="async" src="/assets/svgs/service_1.svg" alt="wood fence icon" width="48"
+        height="48" />
     </picture>
-    <h2>Junk Removal</h2>
+    <h2>Wood Privacy Fences</h2>
     <p>
-      Quick and affordable junk removal for homes and businesses — from single items to full cleanouts.
+      Add beauty, privacy, and security with custom-built wood fences using top-quality materials.
     </p>
   </div>
   <div class="card">
     <picture>
-      <img
-        aria-hidden="true"
-        decoding="async"
-        src="/assets/svgs/service_2.svg"
-        alt="furniture hauling icon"
-        width="48"
-        height="48"
-      />
+      <img aria-hidden="true" decoding="async" src="/assets/svgs/service_2.svg" alt="chain link fence icon" width="48"
+        height="48" />
     </picture>
-    <h2>Furniture Hauling</h2>
+    <h2>Chain-Link Fences</h2>
     <p>
-      We safely remove and dispose of old furniture, couches, mattresses, and more — so you don’t have to lift a thing.
+      Affordable, durable, and low-maintenance fencing ideal for homes, businesses, and pet enclosures.
     </p>
   </div>
   <div class="card">
     <picture>
-      <img
-        aria-hidden="true"
-        decoding="async"
-        src="/assets/svgs/service_3.svg"
-        alt="appliance disposal icon"
-        width="48"
-        height="48"
-      />
+      <img aria-hidden="true" decoding="async" src="/assets/svgs/service_3.svg" alt="vinyl fencing icon" width="48"
+        height="48" />
     </picture>
-    <h2>Appliance Disposal</h2>
+    <h2>Vinyl Fencing</h2>
     <p>
-      Eco-friendly appliance pickup and recycling for refrigerators, washers, dryers, and more.
+      Attractive, low-maintenance fencing that enhances curb appeal and withstands the elements.
     </p>
   </div>
 </section>
@@ -120,34 +86,30 @@ eleventyNavigation:
 <section id="sbs">
   <div class="cs-container">
     <div class="cs-left">
-      {% image './src/images/about_img_0.webp', 'junk hauling service', 'cs-picture
-      cs-picture1', 'lazy'%}
+      {% image './src/images/about_img_0.webp', 'fence installation service', 'cs-picture cs-picture1', 'lazy'%}
     </div>
     <div class="cs-right">
       <span class="cs-topper">About Us</span>
-      <h2 class="cs-title">About Junk Force Michigan</h2>
+      <h2 class="cs-title">About Michigan Fencing Solutions</h2>
       <p class="cs-text">
-        Junk Force Michigan is a family-owned business based in Berkley, MI. Founded by Mike after a 30-year IT career, our mission is simple: 
-        provide affordable, reliable junk hauling services while giving back to our community.
+        Michigan Fencing Solutions is a locally owned company serving Kalamazoo, MI. Led by Richard Sturd, our mission
+        is to deliver reliable, high-quality fencing services backed by integrity and craftsmanship.
       </p>
       <p class="cs-text">
-        We specialize in furniture removal, appliance disposal, yard waste cleanup, garage clear-outs, and full estate cleanouts. Our eco-friendly approach ensures items are donated or recycled whenever possible.
+        We specialize in wood privacy fences, chain-link fencing, vinyl fencing, deck repairs, fence replacement, and
+        gate installation. Every project is completed with attention to detail, durable materials, and on-time service.
       </p>
       <div class="cs-flex-group">
         <p class="cs-flex-p">
-           I’m Mike Fry, founder of Junk Force Michigan. After 30 years in the corporate world, I decided to build a hands-on business with my kids. We're dedicated to helping our neighbors clear out unwanted junk and reclaim their space! We handle all the heavy lifting and disposal with a commitment to 100% customer satisfaction. Let us make your junk disappear! 🚚 We proudly serve the greater metro Detroit area and surrounding communities. Ready to get rid of your junk? Request a free quote today!
+          I’m Richard Sturd, owner of Michigan Fencing Solutions. With years of experience in fencing and a passion for
+          serving my community, I’m proud to provide solutions that protect and enhance local homes and businesses.
+          Quality work and customer satisfaction are at the heart of everything we do.
         </p>
-        <span class="cs-name">Mike Fry</span>
+        <span class="cs-name">Richard Sturd</span>
         <span class="cs-job">Owner</span>
-        <img
-          class="cs-quote-icon"
-          loading="lazy"
-          decoding="async"
-          src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/quote-white.svg"
-          alt="quote icon"
-          width="136"
-          height="77"
-        />
+        <img class="cs-quote-icon" loading="lazy" decoding="async"
+          src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/quote-white.svg" alt="quote icon" width="136"
+          height="77" />
       </div>
       <a href="/about" class="button-solid">More About Us</a>
     </div>
@@ -161,21 +123,20 @@ eleventyNavigation:
 <section id="sbs-r">
   <div class="cs-container">
     <div class="cs-left">
-      {% image './src/images/featured_img_0.png', 'junk hauling in Michigan',
-      'cs-picture cs-picture1', 'lazy'%}
+      {% image './src/images/featured_img_0.png', 'fence contractor in Kalamazoo', 'cs-picture cs-picture1', 'lazy'%}
     </div>
     <div class="cs-right">
-      <span class="cs-topper">Full-Service Junk Removal</span>
-      <h2 class="cs-title">Why Choose Junk Force Michigan</h2>
+      <span class="cs-topper">Quality You Can Trust</span>
+      <h2 class="cs-title">Why Choose Michigan Fencing Solutions</h2>
       <p class="cs-text">
-        We handle everything from single-item pickups to large property cleanouts. Our same-day service and affordable pricing make it easy to get your space back fast.
+        We provide expert fencing solutions designed to last. Whether you need privacy, security, or style, our team
+        ensures your project is done right the first time.
       </p>
       <p class="cs-text">
-        Whether it’s clearing a garage, cleaning out a basement, or hauling away yard waste, we do the heavy lifting so you don’t have to. We work with homeowners, renters, realtors, and businesses to provide stress-free solutions that fit your needs.
-        <br /><br />
-        Our family values mean we treat every job with respect, care, and attention to detail. 
+        Our commitment to using top-quality materials and providing professional, timely service sets us apart. We treat
+        every property like it’s our own, delivering results you can count on.
       </p>
-      <a href="/junk-removal/" class="button-solid">
+      <a href="/services/" class="button-solid">
         Learn More About Our Services →
       </a>
     </div>
@@ -191,47 +152,32 @@ eleventyNavigation:
     <span class="cs-topper">Our Reviews</span>
     <h2 class="cs-title">What Our Customers Say</h2>
     <p class="cs-text">
-      We’re proud to help Michigan families and businesses reclaim their spaces.
-      Customers love our fast service, fair pricing, and family touch. Here’s what they have to say.
+      We’re proud to serve Kalamazoo and surrounding communities with exceptional fencing services. Here’s what our
+      customers are saying.
     </p>
     <ul class="cs-card-group">
       <li class="cs-item">
         <p class="cs-item-p">
-          Junk Force Michigan was amazing! They cleared out our garage in under an hour and even swept up after. Highly recommend!
+          Michigan Fencing Solutions installed our wood privacy fence and it’s perfect. They were professional, on time,
+          and the quality is outstanding!
         </p>
         <span class="cs-reviewer">
-          Sarah L.
+          Justin L.
           <span class="cs-desc">Homeowner</span>
         </span>
-        <img
-          class="cs-item-stars"
-          aria-hidden="true"
-          loading="lazy"
-          decoding="async"
-          src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg"
-          alt="stars"
-          width="96"
-          height="16"
-        />
+        <img class="cs-item-stars" aria-hidden="true" loading="lazy" decoding="async"
+          src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg" alt="stars" width="96" height="16" />
       </li>
       <li class="cs-item">
         <p class="cs-item-p">
-          Mike and his team helped with an estate cleanout and made the process so much easier. Professional, respectful, and very affordable.
+          Richard and his team replaced our old fence quickly and it looks amazing. Highly recommend their services!
         </p>
         <span class="cs-reviewer">
-          James P.
+          James C.
           <span class="cs-desc">Client</span>
         </span>
-        <img
-          class="cs-item-stars"
-          aria-hidden="true"
-          loading="lazy"
-          decoding="async"
-          src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg"
-          alt="stars"
-          width="96"
-          height="16"
-        />
+        <img class="cs-item-stars" aria-hidden="true" loading="lazy" decoding="async"
+          src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg" alt="stars" width="96" height="16" />
       </li>
     </ul>
   </div>
@@ -244,15 +190,15 @@ eleventyNavigation:
 <section id="cta">
   <div class="container">
     <h2 class="title">
-      Get Rid of Your Junk <br />
-      Today
+      Ready to Upgrade Your Property?
     </h2>
     <p>
-      Ready for a clutter-free space? Contact Junk Force Michigan for affordable, same-day junk removal.
+      Contact Michigan Fencing Solutions today for expert fence installation, repair, or replacement. Let’s build
+      something strong together.
     </p>
     <a href="/contact/" class="button-solid">Contact Us</a>
   </div>
-  {% image './src/images/final_home_img.png', 'junk removal team at work', '', 'lazy',
+  {% image './src/images/final_home_img.png', 'fence installation team', '', 'lazy',
   '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
 </section>
 
