--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -1,9 +1,7 @@
 ---
 layout: "base.html"
-description: "Learn about Junk Force Michigan’s commitment to reliable junk removal, hauling, and cleanout services
-across Michigan. From furniture and appliances to yard waste and construction debris, we handle it all with care and
-efficiency."
-metaTitle: "About Junk Force Michigan"
+description: "Learn about Michigan Fencing Solutions’ dedication to providing top-quality fencing services across Michigan. From residential privacy fences to commercial security fencing, we deliver expert craftsmanship and dependable service."
+metaTitle: "About Michigan Fencing Solutions"
 tagTitle: "About"
 preloadImg: "/images/landing.png"
 preloadCSS: "/css/about.css"
@@ -19,7 +17,7 @@ eleventyNavigation:
 
 <section id="int-hero">
   <h1 id="home-h">About Us</h1>
-  {% image './src/images/landing.png', 'Junk Force Michigan team at work', '', 'lazy',
+  {% image './src/images/landing.png', 'Michigan Fencing Solutions team at work', '', 'lazy',
   '(max-width: 850px) 850px, 1920px'%}
 </section>
 
@@ -31,32 +29,25 @@ eleventyNavigation:
   <div class="cs-container">
     <!-- Left Image Section -->
     <div class="cs-left">
-      {% image './src/images/about_img_0.webp', 'junk removal in progress',
+      {% image './src/images/about_img_0.webp', 'fence installation in progress',
       'cs-picture cs-picture1', 'lazy'%}
     </div>
     <!-- Right Content Section-->
     <div class="cs-right">
       <span class="cs-topper">About Us</span>
-      <h2 class="cs-title">About Junk Force Michigan</h2>
+      <h2 class="cs-title">About Michigan Fencing Solutions</h2>
       <p class="cs-text">
-        Junk Force Michigan is a locally owned and operated junk removal company
-        proudly serving homeowners, renters, and businesses across Michigan. We
-        provide fast, affordable, and eco-friendly removal services for
-        furniture, appliances, yard waste, construction debris, hot tubs, and
-        more.
+        Michigan Fencing Solutions is a locally owned and operated fencing company proudly serving homeowners and businesses throughout Michigan. We specialize in high-quality fencing solutions, including wood, vinyl, chain link, and decorative metal fencing tailored to meet your needs.
       </p>
       <p class="cs-text">
-        Our mission is simple: make junk removal stress-free. Whether it’s a
-        single bulky item or a full property cleanout, our team shows up on
-        time, works efficiently, and ensures as much as possible is recycled or
-        donated to reduce landfill waste.
+        Our mission is simple: deliver durable, attractive fences with exceptional service. Whether you need a privacy fence for your backyard, a secure perimeter for your business, or custom fencing for a unique project, our team ensures expert installation and lasting results.
       </p>
 
       <div class="cs-flex-group">
         <p class="cs-flex-p">
-          I’m Mike Fry, founder of Junk Force Michigan. After 30 years in the corporate world, I decided to build a hands-on business with my kids. We're dedicated to helping our neighbors clear out unwanted junk and reclaim their space! We handle all the heavy lifting and disposal with a commitment to 100% customer satisfaction. Let us make your junk disappear! 🚚 We proudly serve the greater metro Detroit area and surrounding communities. Ready to get rid of your junk? Request a free quote today!
+          I’m Richard Sturd, founder of Michigan Fencing Solutions. We’re committed to quality workmanship, honest pricing, and complete customer satisfaction. Let us help you create the perfect fence for your property.
         </p>
-        <span class="cs-name">Mike Fry</span>
+        <span class="cs-name">Richard Sturd</span>
         <span class="cs-job">Owner</span>
         <img class="cs-quote-icon" loading="lazy" decoding="async"
           src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/quote-white.svg" alt="quote icon" width="136"
@@ -81,60 +72,51 @@ eleventyNavigation:
         <li class="cs-faq-item active">
           <button class="cs-button">
             <span class="cs-button-text">
-              What types of junk do you remove?
+              What types of fences do you install?
             </span>
           </button>
           <p class="cs-item-p">
-            We handle almost everything — furniture, appliances, yard waste,
-            hot tubs, construction debris, mattresses, and full property
-            cleanouts. If it can be lifted, we can haul it away.
+            We install a wide variety of fences including wood, vinyl, chain link, and decorative metal fencing for both residential and commercial properties.
           </p>
         </li>
         <li class="cs-faq-item">
           <button class="cs-button">
             <span class="cs-button-text">
-              Do you provide same-day service?
+              Do you provide free estimates?
             </span>
           </button>
           <p class="cs-item-p">
-            Yes! In many cases, we can offer same-day or next-day junk removal
-            so you don’t have to wait to clear out your space.
+            Yes, we offer free consultations and estimates to help you choose the best fencing option for your needs and budget.
           </p>
         </li>
         <li class="cs-faq-item">
           <button class="cs-button">
             <span class="cs-button-text">
-              What happens to the junk you collect?
+              How long does installation take?
             </span>
           </button>
           <p class="cs-item-p">
-            We donate usable items to local charities whenever possible and
-            recycle materials like metal, appliances, and yard waste. Only what
-            can’t be reused goes to the landfill.
+            Installation times vary depending on the size and type of project, but most residential fences can be completed within a few days.
           </p>
         </li>
         <li class="cs-faq-item">
           <button class="cs-button">
             <span class="cs-button-text">
-              Do you work with homeowners and businesses?
+              Do you handle commercial fencing projects?
             </span>
           </button>
           <p class="cs-item-p">
-            Absolutely. We help homeowners, renters, realtors, landlords, and
-            business owners with cleanouts, office clearings, move-outs, and
-            more.
+            Absolutely. We provide secure, durable fencing solutions for commercial and industrial properties, tailored to meet specific security requirements.
           </p>
         </li>
         <li class="cs-faq-item">
           <button class="cs-button">
             <span class="cs-button-text">
-              Why choose Junk Force Michigan?
+              Why choose Michigan Fencing Solutions?
             </span>
           </button>
           <p class="cs-item-p">
-            We’re professional, reliable, and eco-conscious. With upfront
-            pricing, friendly crews, and a commitment to recycling, we make junk
-            removal easy and affordable.
+            We’re known for quality craftsmanship, dependable service, and customer-first values. Our team goes above and beyond to ensure every fence we build meets the highest standards.
           </p>
         </li>
       </ul>
@@ -159,15 +141,13 @@ eleventyNavigation:
 <section id="cta">
   <div class="container">
     <h2 class="title">
-      Clear the Clutter <br />
-      With Us Today
+      Build Your Perfect Fence Today
     </h2>
     <p>
-      Junk piling up? Let Junk Force Michigan handle the heavy lifting. Fast,
-      affordable, and eco-friendly junk removal is just a call away.
+      Ready to enhance your property with a beautiful, durable fence? Contact Michigan Fencing Solutions for expert service and a free estimate.
     </p>
-    <a href="/contact/" class="button-solid">Free Estimate</a>
+    <a href="/contact/" class="button-solid">Get a Free Estimate</a>
   </div>
-  {% image './src/images/final_home_img.png', 'Junk Force Michigan team hauling debris',
+  {% image './src/images/final_home_img.png', 'Michigan Fencing Solutions team installing fence',
   '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920'%}
 </section>
