--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -1,7 +1,7 @@
 ---
 layout: "base.html"
-description: "Junk Force Michigan provides expert electrical system repair and installation across Michigan. Residential, commercial, and industrial services including standby power systems, LED conversions, and lighting repairs."
-metaTitle: "Junk Force Michigan - Electrical Services in Michigan"
+description: "Michigan Fencing Solutions delivers expert fencing projects across Michigan. From residential privacy fences to commercial security installations, our portfolio showcases quality craftsmanship and reliable service."
+metaTitle: "Michigan Fencing Solutions - Fencing Projects in Michigan"
 tagTitle: "Projects"
 preloadImg: "/images/landing.png"
 preloadCSS: "/css/projects.css"
@@ -11,15 +11,13 @@ eleventyNavigation:
   order: 300
 ---
 
-<!-- Enter html code below -->
-
 <!-- ============================================ -->
 <!--                    LANDING                   -->
 <!-- ============================================ -->
 
 <section id="int-hero">
   <h1 id="home-h">Our Projects</h1>
-  {% image './src/images/projectsbannerimg.png', 'electrical service projects', '',
+  {% image './src/images/projectsbannerimg.png', 'fence installation projects', '',
   'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
 </section>
 
@@ -32,27 +30,30 @@ eleventyNavigation:
     <div class="cs-image-group">
       <!-- Row 1-->
       <div class="cs-row cs-row-1">
-        {% image './src/images/portfolio/port-1.webp', 'standby generator
-        installation', 'cs-picture cs-picture-1', 'lazy', '(max-width: 600px)
-        200px, 400px'%} {% image './src/images/portfolio/port-2.webp', 'commercial
-        electrical panel upgrade', 'cs-picture cs-picture-2', 'lazy',
-        '(max-width: 600px) 200px, 400px'%} 
+        {% image './src/images/portfolio/port-1.webp', 'wood privacy fence installation',
+        'cs-picture cs-picture-1', 'lazy', '(max-width: 600px) 200px, 400px'%} 
+        {% image './src/images/portfolio/port-2.webp', 'commercial chain link fence',
+        'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px, 400px'%} 
+        {% image './src/images/portfolio/port-3.webp', 'commercial chain link fence',
+        'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px, 400px'%} 
       </div>
       <!-- Row 2 -->
       <div class="cs-row cs-row-2">
-        {% image './src/images/portfolio/port-3.webp', 'LED lighting conversion',
+        {% image './src/images/portfolio/port-4.webp', 'vinyl backyard fence project',
         'cs-picture cs-picture-1', 'lazy', '(max-width: 600px) 200px, 400px'%}
-        {% image './src/images/portfolio/port-4.webp', 'parking lot light repair',
+        {% image './src/images/portfolio/port-5.webp', 'decorative metal fencing',
+        'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px, 400px'%}
+        {% image './src/images/portfolio/port-6.webp', 'decorative metal fencing',
         'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px, 400px'%}
       </div>
       <!-- Row 3 -->
       <div class="cs-row cs-row-3">
-        {% image './src/images/portfolio/port-5.webp', 'residential wiring
-        project', 'cs-picture cs-picture-1', 'lazy', '(max-width: 600px) 200px,
-        400px'%} 
-        {% image './src/images/portfolio/port-1.webp', 'residential wiring
-        project', 'cs-picture cs-picture-1', 'lazy', '(max-width: 600px) 200px,
-        400px'%} 
+        {% image './src/images/portfolio/port-7.webp', 'residential front yard fence',
+        'cs-picture cs-picture-1', 'lazy', '(max-width: 600px) 200px, 400px'%} 
+        {% image './src/images/portfolio/port-8.webp', 'custom wood gate installation',
+        'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px, 400px'%} 
+        {% image './src/images/portfolio/port-9.webp', 'custom wood gate installation',
+        'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px, 400px'%} 
       </div>
     </div>
     <a href="/contact" class="button-solid">Get Free Quote</a>
@@ -66,16 +67,14 @@ eleventyNavigation:
 <section id="cta">
   <div class="container">
     <h2 class="title">
-      Power Up <br />
-      With Us Today
+      Build with Confidence <br />
+      Start Your Project Today
     </h2>
     <p>
-      From electrical repairs to complete installations, Junk Force Michigan
-      keeps Michigan homes, businesses, and facilities running smoothly. Contact
-      us today for dependable service and expert results.
+      From simple backyard fences to complex commercial installations, Michigan Fencing Solutions delivers durable, attractive fencing tailored to your needs. Contact us today for a free estimate and quality you can trust.
     </p>
     <a href="/contact.html" class="button-solid">Free Estimate</a>
   </div>
-  {% image './src/images/final_home_img.png', 'electrical system upgrade', '',
+  {% image './src/images/final_home_img.png', 'completed fencing project', '',
   'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
 </section>
