--- a/src/pages/servicepages/chain-link-fences.html
+++ b/src/pages/servicepages/chain-link-fences.html
@@ -1,14 +1,14 @@
 ---
 layout: "base.html"
-description: "Reliable Furniture Hauling and Disposal Services for Homes and Businesses in Michigan"
-metaTitle: "Furniture Hauling | Junk Force Michigan"
-tagTitle: "Furniture Hauling Services"
-title: "Michigan Furniture Hauling & Disposal"
-preloadImg: "/images/furniture_banner.png"
+description: "Durable and Affordable Chain-Link Fence Installation for Homes and Businesses in Kalamazoo, MI"
+metaTitle: "Chain-Link Fencing | Michigan Fencing Solutions"
+tagTitle: "Chain-Link Fence Installation"
+title: "Michigan Chain-Link Fence Installation"
+preloadImg: "/images/chainlink_banner.png"
 preloadCSS: "/css/services.css"
-permalink: "/furniture-hauling/"
+permalink: "/chain-link-fences/"
 eleventyNavigation:
-  key: Furniture Hauling
+  key: Chain-Link Fencing
   parent: Services
   order: 710
 ---
@@ -18,11 +18,11 @@ eleventyNavigation:
 <!-- ============================================ -->
 
 <section id="int-hero">
-    <h1 id="home-h">Furniture Hauling Services</h1>
+    <h1 id="home-h">Chain-Link Fence Installation</h1>
     <picture class="cs-background">
-        <source media="(max-width: 600px)" srcset="/images/furniture_banner.png" />
-        <source media="(min-width: 601px)" srcset="/images/furniture_banner.png" />
-        <img decoding="async" src="/images/furniture_banner.png" alt="furniture hauling service banner" width="1280"
+        <source media="(max-width: 600px)" srcset="/images/chainlink_banner.png" />
+        <source media="(min-width: 601px)" srcset="/images/chainlink_banner.png" />
+        <img decoding="async" src="/images/chainlink_banner.png" alt="chain-link fence installation banner" width="1280"
             height="568" aria-hidden="true" />
     </picture>
 </section>
@@ -36,16 +36,16 @@ eleventyNavigation:
         <div class="cs-image-group">
             <div class="cs-flex">
                 <picture class="cs-background">
-                    <source media="(max-width: 600px)" srcset="/images/furniture_0.png" />
-                    <source media="(min-width: 601px)" srcset="/images/furniture_0.png" />
-                    <img loading="lazy" decoding="async" src="/images/furniture_0.png"
-                        alt="furniture hauling service in Michigan" width="542" height="728" />
+                    <source media="(max-width: 600px)" srcset="/images/chainlink_0.png" />
+                    <source media="(min-width: 601px)" srcset="/images/chainlink_0.png" />
+                    <img loading="lazy" decoding="async" src="/images/chainlink_0.png"
+                        alt="chain-link fence installation in Kalamazoo" width="542" height="728" />
                 </picture>
                 <div class="cs-box">
                     <img class="cs-box-icon" loading="lazy" decoding="async"
                         src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/gear-white.svg" alt="icon"
                         width="60" height="60" />
-                    <span class="cs-desc">Reliable Furniture Removal</span>
+                    <span class="cs-desc">Strong, Secure, and Affordable</span>
                 </div>
             </div>
             <ul class="cs-card-group">
@@ -54,10 +54,10 @@ eleventyNavigation:
                         <img class="cs-h3-icon" aria-hidden="true" loading="lazy" decoding="async"
                             src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/circle-check.svg" alt="icon"
                             width="32" height="32" />
-                        Full-Service Furniture Hauling
+                        Residential & Commercial Applications
                     </h3>
                     <p class="cs-item-text">
-                        From couches and mattresses to desks and dressers, we handle heavy lifting so you don’t have to.
+                        Our chain-link fences are perfect for securing backyards, businesses, schools, and industrial properties.
                     </p>
                 </li>
                 <li class="cs-item">
@@ -65,10 +65,10 @@ eleventyNavigation:
                         <img class="cs-h3-icon" aria-hidden="true" loading="lazy" decoding="async"
                             src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/circle-check.svg" alt="icon"
                             width="32" height="32" />
-                        Eco-Friendly Disposal
+                        Low-Maintenance Durability
                     </h3>
                     <p class="cs-item-text">
-                        Whenever possible, we donate or recycle your old furniture—keeping usable items out of landfills.
+                        Built from high-quality galvanized steel, our fences are weather-resistant and designed to last.
                     </p>
                 </li>
             </ul>
@@ -77,35 +77,35 @@ eleventyNavigation:
             <hr />
             <br /><br />
             <h1 class="cs-title">
-                Expert Furniture Hauling by
-                <span class="cs-color">Junk Force Michigan</span>
+                Chain-Link Fencing by
+                <span class="cs-color">Michigan Fencing Solutions</span>
             </h1>
             <br />
-            <h3>Same-Day Service • Family-Owned • Affordable Rates</h3>
+            <h3>Affordable • Reliable • Built to Last</h3>
             <br />
             <p>
-                Junk Force Michigan makes furniture removal simple, stress-free, and affordable. Whether you’re upgrading your home or clearing out unwanted items, our team will safely haul away your old furniture the very same day.
+                At Michigan Fencing Solutions, we specialize in installing durable, cost-effective chain-link fences that provide security without sacrificing visibility. Whether you need to protect your home, business, or industrial site, we deliver professional results on time and on budget.
             </p>
             <p>
-                From single-item pickups to full home or office clearouts, we provide dependable hauling services with an eco-friendly approach.
+                As a locally owned and operated company, we take pride in offering personalized service, high-quality materials, and expert craftsmanship to every project we undertake.
             </p>
             <br />
             <hr />
             <br />
             <div class="desktop-only">
-                <h3>Our Furniture Hauling Process</h3>
+                <h3>Our Chain-Link Fence Installation Process</h3>
                 <ol>
-                    <li>Call or book your furniture hauling service online</li>
-                    <li>Get a free, no-obligation estimate</li>
-                    <li>Our crew arrives on time—same-day or scheduled</li>
-                    <li>We remove, recycle, or donate your furniture</li>
+                    <li>Schedule your free on-site consultation</li>
+                    <li>Receive a custom, no-obligation quote</li>
+                    <li>We install using top-grade materials for long-lasting durability</li>
+                    <li>Final inspection to ensure quality and customer satisfaction</li>
                 </ol>
-                <h4>Why Choose Junk Force Michigan?</h4>
+                <h4>Why Choose Michigan Fencing Solutions?</h4>
                 <ul>
-                    <li>Same-day furniture removal</li>
-                    <li>Family-owned and operated</li>
-                    <li>Eco-friendly recycling & donations</li>
-                    <li>Upfront, affordable pricing</li>
+                    <li>Expert local fence contractors with years of experience</li>
+                    <li>Affordable pricing with no hidden fees</li>
+                    <li>Durable, low-maintenance materials</li>
+                    <li>Prompt and professional service every time</li>
                 </ul>
             </div>
         </div>
@@ -120,42 +120,42 @@ eleventyNavigation:
 <section id="services-563">
     <div class="cs-container">
         <picture class="cs-picture">
-            <source media="(max-width: 600px)" srcset="/images/furniture_1.png" />
-            <source media="(min-width: 601px)" srcset="/images/furniture_1.png" />
-            <img loading="lazy" decoding="async" src="/images/furniture_1.png" alt="furniture removal services"
+            <source media="(max-width: 600px)" srcset="/images/chainlink_1.png" />
+            <source media="(min-width: 601px)" srcset="/images/chainlink_1.png" />
+            <img loading="lazy" decoding="async" src="/images/chainlink_1.png" alt="chain-link fencing services"
                 width="630" height="528" aria-hidden="true" />
         </picture>
         <div class="cs-content">
-            <span class="cs-topper">Furniture Removal Made Easy</span>
+            <span class="cs-topper">Secure Your Property</span>
             <br />
             <h3 class="cs-h3">
-                Complete
-                <span class="cs-color">Furniture Hauling & Disposal</span>
+                Professional
+                <span class="cs-color">Chain-Link Fence Installation</span>
             </h3>
             <p class="cs-text">
-                Don’t struggle with heavy, bulky items—our crew does the lifting, hauling, and eco-friendly disposal for you.
+                Our chain-link fences are ideal for residential yards, commercial perimeters, pet enclosures, and more—providing affordable, long-lasting protection.
             </p>
             <ul class="cs-ul">
                 <li class="cs-li">
                     <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async"
                         src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Services/arrow-green.svg" alt="arrow"
                         width="16" height="18" />
-                    Sofa, couch & loveseat removal
+                    Residential & commercial fencing solutions
                 </li>
                 <li class="cs-li">
                     <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async"
                         src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Services/arrow-green.svg" alt="arrow"
                         width="16" height="18" />
-                    Mattress & bed frame disposal
+                    Pet enclosures & security fencing
                 </li>
                 <li class="cs-li">
                     <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async"
                         src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Services/arrow-green.svg" alt="arrow"
                         width="16" height="18" />
-                    Office desks, chairs & cubicles
+                    Industrial & boundary fencing
                 </li>
             </ul>
-            <a href="/contact" class="cs-button-solid">Get a Furniture Hauling Quote</a>
+            <a href="/contact" class="cs-button-solid">Get a Chain-Link Fence Quote</a>
         </div>
     </div>
 </section>
@@ -168,56 +168,52 @@ eleventyNavigation:
     <div class="cs-container">
         <div class="cs-content">
             <span class="cs-topper">FAQs</span>
-            <h2 class="cs-title">Furniture Hauling FAQs</h2>
+            <h2 class="cs-title">Chain-Link Fence FAQs</h2>
             <p class="cs-text">
-                Have questions about our furniture hauling services? Here are answers to some of the most common ones.
+                Have questions about our chain-link fencing services? Here are answers to some of the most common ones.
             </p>
         </div>
         <div class="cs-flex-group">
             <ul class="cs-faq-group">
                 <li class="cs-faq-item active">
                     <button class="cs-button">
-                        What types of furniture do you haul?
+                        What sizes and heights are available for chain-link fences?
                     </button>
                     <p class="cs-item-p">
-                        We remove couches, recliners, mattresses, tables, chairs, dressers, desks, and more.
+                        We offer a variety of heights and configurations to meet residential, commercial, and industrial needs.
                     </p>
                 </li>
                 <li class="cs-faq-item">
-                    <button class="cs-button">
-                        Do you offer same-day furniture removal?
-                    </button>
+                    <button class="cs-button">Are chain-link fences durable?</button>
                     <p class="cs-item-p">
-                        Yes! We offer fast, same-day service whenever possible—just give us a call at <a href="tel:3134449540">313-444-9540</a>.
+                        Yes. Our fences are built from galvanized steel for long-lasting durability and resistance to rust and weather.
                     </p>
                 </li>
                 <li class="cs-faq-item">
-                    <button class="cs-button">How much does furniture hauling cost?</button>
+                    <button class="cs-button">Can you add privacy to a chain-link fence?</button>
                     <p class="cs-item-p">
-                        Pricing depends on the size and number of items. We always provide upfront, no-hidden-fee estimates.
+                        Absolutely. We can install privacy slats or screens to enhance security and seclusion.
                     </p>
                 </li>
                 <li class="cs-faq-item">
-                    <button class="cs-button">
-                        What happens to my old furniture?
-                    </button>
+                    <button class="cs-button">How long does installation take?</button>
                     <p class="cs-item-p">
-                        We recycle or donate whenever possible—keeping usable items out of landfills.
+                        Most projects are completed within a few days, depending on the size and complexity of the job.
                     </p>
                 </li>
                 <li class="cs-faq-item">
-                    <button class="cs-button">Can you remove office furniture?</button>
+                    <button class="cs-button">Do you offer free estimates?</button>
                     <p class="cs-item-p">
-                        Absolutely. We handle office desks, chairs, cubicles, and more for businesses of all sizes.
+                        Yes! Contact us today at <a href="tel:2696158646">(269) 615-8646</a> for a free consultation and quote.
                     </p>
                 </li>
             </ul>
             <div class="cs-cta">
-                <h3 class="cs-h3">Ready to Get Rid of Old Furniture?</h3>
+                <h3 class="cs-h3">Ready to Install a Chain-Link Fence?</h3>
                 <p class="cs-cta-p">
-                    Our professional team will haul away your unwanted furniture quickly and affordably—so you can enjoy your space again.
+                    Trust Michigan Fencing Solutions for expert installation, quality materials, and reliable service every time.
                 </p>
-                <a href="/contact" class="cs-button-solid">Contact Us</a>
+                <a href="/contact" class="cs-button-solid">Request Your Free Quote</a>
             </div>
         </div>
     </div>
