--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -1,8 +1,7 @@
 ---
 layout: "base.html"
-description: "Contact Junk Force Michigan for fast, reliable junk removal, hauling, and cleanout services. Serving homes
-and businesses across Michigan with same-day service, affordable rates, and eco-friendly disposal."
-metaTitle: "Contact Junk Force Michigan | Junk Removal Services"
+description: "Contact Michigan Fencing Solutions for professional fencing installation, repair, and custom design. Serving residential, commercial, and agricultural clients across Michigan with quality materials and expert craftsmanship."
+metaTitle: "Contact Michigan Fencing Solutions | Fence Installation & Repair"
 tagTitle: "Contact"
 preloadImg: "/images/landing.png"
 preloadCSS: "/css/contact.css"
@@ -18,7 +17,7 @@ eleventyNavigation:
 
 <section id="int-hero">
   <h1 id="home-h">Contact Us</h1>
-  {% image './src/images/contactbannerimg.png', 'Junk Force Michigan team ready to help with junk removal needs', '',
+  {% image './src/images/contactbannerimg.png', 'Michigan Fencing Solutions team ready to assist with fencing needs', '',
   'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
 </section>
 
@@ -29,12 +28,10 @@ eleventyNavigation:
 <section id="cs-contact-242">
   <div class="cs-container">
     <div class="cs-content">
-      <span class="cs-topper">Here to Help</span>
-      <h2 class="cs-title">Get in Touch</h2>
+      <span class="cs-topper">Let's Build</span>
+      <h2 class="cs-title">Get Your Free Quote</h2>
       <p class="cs-text">
-        Whether you’re clearing out old furniture, removing appliances, tackling yard waste, or need a full estate
-        cleanout, Junk Force Michigan is ready to help. Our family-owned business delivers fast, friendly, and
-        affordable junk removal services across Southeast Michigan.
+        Whether you need a durable privacy fence, a secure commercial perimeter, or a custom gate solution, Michigan Fencing Solutions is here to help. Our experienced team provides dependable service throughout Michigan, using only high-quality materials for long-lasting results.
       </p>
     </div>
     <!-- Form -->
@@ -52,17 +49,17 @@ eleventyNavigation:
         <input class="cs-input" required type="text" id="phone-242" name="phone" placeholder="+1 (313) 444-9540" />
       </label>
       <label class="cs-label">
-        How Did You Find Us
-        <input class="cs-input" type="text" id="find-242" name="find-us"
-          placeholder="Google, Referral, Social Media..." />
+        Project Type
+        <input class="cs-input" type="text" id="find-242" name="project-type"
+          placeholder="Residential, Commercial, Agricultural..." />
       </label>
       <label class="cs-label cs-label-message">
         Message
         <textarea class="cs-input cs-textarea" required name="Message" id="message-242"
-          placeholder="Hello, I’m interested in..."></textarea>
+          placeholder="Hello, I’m interested in a new fence installation for..."></textarea>
       </label>
       <button class="cs-button-solid cs-submit" type="submit">
-        Submit Message
+        Submit Request
       </button>
     </form>
 
@@ -76,7 +73,7 @@ eleventyNavigation:
           </picture>
           <div class="cs-flex-group">
             <span class="cs-header">Email</span>
-            <a href="mailto:mike@junkforcemichigan.com" class="cs-link">mike@junkforcemichigan.com</a>
+            <a href="mailto:Richardsturd@gmail.com" class="cs-link">Richardsturd@gmail.com</a>
           </div>
         </li>
         <li class="cs-li">
@@ -86,7 +83,7 @@ eleventyNavigation:
           </picture>
           <div class="cs-flex-group">
             <span class="cs-header">Phone</span>
-            Tel: <a href="tel:313-444-9540">(313) 444-9540</a>
+            Tel: <a href="tel:269-615-8646">(269) 615-8646</a>
           </div>
         </li>
       </ul>
@@ -95,7 +92,7 @@ eleventyNavigation:
         <source media="(max-width: 600px)" srcset="/images/map.png" />
         <source media="(min-width: 601px)" srcset="/images/map.png" />
         <img class="cs-img" aria-hidden="true" loading="lazy" decoding="async" src="/images/map.PNG"
-          alt="Map showing Junk Force Michigan service area" width="462" height="438" />
+          alt="Map showing Michigan Fencing Solutions service area" width="462" height="438" />
       </picture>
     </div>
   </div>
@@ -110,19 +107,16 @@ eleventyNavigation:
     <span class="cs-topper">Client Feedback</span>
     <h2 class="cs-title">What Our Customers Say</h2>
     <p class="cs-text">
-      At Junk Force Michigan, we’re proud to provide same-day junk removal that’s reliable, affordable, and
-      eco-friendly. From hauling away old furniture to clearing full properties, our team delivers results you can
-      trust. Here’s what our customers have to say:
+      At Michigan Fencing Solutions, we take pride in delivering fences that combine durability, beauty, and security. From small backyard projects to large-scale commercial installations, our clients trust us to get the job done right:
     </p>
     <ul class="cs-card-group">
       <!-- Review 1 -->
       <li class="cs-item">
         <p class="cs-item-p">
-          Junk Force Michigan was amazing! They cleared out my garage in no time, were super professional, and even
-          swept up after. Highly recommend them.
+          Michigan Fencing Solutions did a fantastic job on our new privacy fence! The crew was professional, on time, and the quality of work exceeded our expectations.
         </p>
         <span class="cs-reviewer">
-          Sarah L.
+          Elizabeth O.
           <span class="cs-desc">Homeowner</span>
         </span>
         <img class="cs-item-stars" aria-hidden="true" loading="lazy" decoding="async"
@@ -132,11 +126,10 @@ eleventyNavigation:
       <!-- Review 2 -->
       <li class="cs-item">
         <p class="cs-item-p">
-          They handled our office cleanout quickly and at a great price. Friendly team, on time, and made the whole
-          process stress-free.
+          They installed a security fence around our commercial property and we couldn’t be happier. Excellent service, fair pricing, and top-notch workmanship.
         </p>
         <span class="cs-reviewer">
-          James P.
+          Isaac F.
           <span class="cs-desc">Business Owner</span>
         </span>
         <img class="cs-item-stars" aria-hidden="true" loading="lazy" decoding="async"
