--- a/src/pages/servicepages/deck-repair.html
+++ b/src/pages/servicepages/deck-repair.html
@@ -1,16 +1,16 @@
 ---
 layout: "base.html"
-description: "Fast and Affordable Yard Waste Removal Services in Michigan"
-metaTitle: "Junk Force Michigan | Yard Waste Removal"
-tagTitle: "Yard Waste Service"
-title: "Yard Waste Service"
-preloadImg: "/images/yardwaste_banner.png"
+description: "Professional Deck Repair Services in Kalamazoo, MI"
+metaTitle: "Michigan Fencing Solutions | Deck Repair"
+tagTitle: "Deck Repair"
+title: "Deck Repair"
+preloadImg: "/images/deckrepair_banner.png"
 preloadCSS: "/css/services.css"
-permalink: "/yard-waste/"
+permalink: "/deck-repair/"
 eleventyNavigation:
-  key: Yard Waste
-  parent: Services
-  order: 100
+key: Deck Repair
+parent: Services
+order: 100
 ---
 
 <!-- ============================================ -->
@@ -18,12 +18,12 @@ eleventyNavigation:
 <!-- ============================================ -->
 
 <section id="int-hero">
-    <h1 id="home-h">Yard Waste Removal Services</h1>
+    <h1 id="home-h">Deck Repair Services</h1>
     <picture class="cs-background">
-        <source media="(max-width: 600px)" srcset="/images/yardwaste_banner.png" />
-        <source media="(min-width: 601px)" srcset="/images/yardwaste_banner.png" />
-        <img decoding="async" src="/images/yardwaste_banner.png" alt="yard waste removal service banner"
-            width="1280" height="568" aria-hidden="true" />
+        <source media="(max-width: 600px)" srcset="/images/deckrepair_banner.png" />
+        <source media="(min-width: 601px)" srcset="/images/deckrepair_banner.png" />
+        <img decoding="async" src="/images/deckrepair_banner.png" alt="deck repair service banner" width="1280"
+            height="568" aria-hidden="true" />
     </picture>
 </section>
 
@@ -36,16 +36,16 @@ eleventyNavigation:
         <div class="cs-image-group">
             <div class="cs-flex">
                 <picture class="cs-background">
-                    <source media="(max-width: 600px)" srcset="/images/yardwaste_0.png" />
-                    <source media="(min-width: 601px)" srcset="/images/yardwaste_0.png" />
-                    <img loading="lazy" decoding="async" src="/images/yardwaste_0.png" alt="yard debris removal"
+                    <source media="(max-width: 600px)" srcset="/images/deckrepair_0.png" />
+                    <source media="(min-width: 601px)" srcset="/images/deckrepair_0.png" />
+                    <img loading="lazy" decoding="async" src="/images/deckrepair_0.png" alt="deck restoration"
                         width="542" height="728" />
                 </picture>
                 <div class="cs-box">
                     <img class="cs-box-icon" loading="lazy" decoding="async"
-                        src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/gear-white.svg" alt="icon"
-                        width="60" height="60" />
-                    <span class="cs-desc">Eco-Friendly Yard Waste Disposal</span>
+                        src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/gear-white.svg" alt="icon" width="60"
+                        height="60" />
+                    <span class="cs-desc">Restoring Strength and Beauty</span>
                 </div>
             </div>
             <ul class="cs-card-group">
@@ -54,10 +54,10 @@ eleventyNavigation:
                         <img class="cs-h3-icon" aria-hidden="true" loading="lazy" decoding="async"
                             src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/circle-check.svg" alt="icon"
                             width="32" height="32" />
-                        Brush & Branch Removal
+                        Structural Repairs
                     </h3>
                     <p class="cs-item-text">
-                        Clear out piles of branches, brush, and trimmings quickly and affordably.
+                        We fix loose boards, weak supports, and damaged railings to ensure safety.
                     </p>
                 </li>
                 <li class="cs-item">
@@ -65,10 +65,10 @@ eleventyNavigation:
                         <img class="cs-h3-icon" aria-hidden="true" loading="lazy" decoding="async"
                             src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/circle-check.svg" alt="icon"
                             width="32" height="32" />
-                        Leaf & Grass Disposal
+                        Surface Refinishing
                     </h3>
                     <p class="cs-item-text">
-                        We haul away bags or loose piles of leaves and yard clippings with no hassle.
+                        We sand, seal, and refinish your deck for a refreshed look and longer lifespan.
                     </p>
                 </li>
             </ul>
@@ -77,38 +77,38 @@ eleventyNavigation:
             <hr />
             <br /><br />
             <h1 class="cs-title">
-                Yard Waste Removal by
-                <span class="cs-color">Junk Force Michigan</span>
+                Expert Deck Repair by
+                <span class="cs-color">Michigan Fencing Solutions</span>
             </h1>
             <br />
-            <h3>Reliable, Affordable, and Eco-Friendly Yard Cleanup</h3>
+            <h3>Reliable, Affordable, and Professional Deck Restoration</h3>
             <br />
             <p>
-                At Junk Force Michigan, we specialize in hauling away all types of yard waste —
-                from branches and brush to leaves, grass clippings, and outdoor debris.
-                Our eco-friendly approach ensures your waste is disposed of responsibly.
+                At Michigan Fencing Solutions, we bring new life to old and damaged decks.
+                Whether your deck has loose boards, worn surfaces, or structural issues,
+                our skilled team ensures it’s safe, functional, and beautiful again.
             </p>
             <p>
-                As a family-owned business, we pride ourselves on same-day service, affordable
-                rates, and a commitment to keeping Michigan neighborhoods clean and beautiful.
+                As a locally owned company in Kalamazoo, we pride ourselves on timely service,
+                fair pricing, and high-quality craftsmanship that stands the test of time.
             </p>
             <br />
             <hr />
             <br />
             <div class="desktop-only">
-                <h3>Our Yard Waste Removal Process</h3>
+                <h3>Our Deck Repair Process</h3>
                 <ol>
-                    <li>Schedule a convenient pick-up time</li>
-                    <li>Our crew collects your yard debris</li>
-                    <li>We recycle or compost yard waste responsibly</li>
-                    <li>Final clean-up and customer approval</li>
+                    <li>Schedule a free deck inspection</li>
+                    <li>We assess damage and provide a clear estimate</li>
+                    <li>Our team repairs, replaces, and refinishes as needed</li>
+                    <li>Final safety check and customer approval</li>
                 </ol>
-                <h4>Why Choose Junk Force Michigan?</h4>
+                <h4>Why Choose Michigan Fencing Solutions?</h4>
                 <ul>
-                    <li>Same-day yard waste pickup available</li>
-                    <li>Affordable, transparent pricing</li>
-                    <li>Eco-friendly composting & recycling</li>
-                    <li>Family-owned and community-focused</li>
+                    <li>Experienced local deck repair specialists</li>
+                    <li>Quality materials for lasting results</li>
+                    <li>Timely, professional service</li>
+                    <li>Trusted by Kalamazoo homeowners</li>
                 </ul>
             </div>
         </div>
@@ -123,43 +123,43 @@ eleventyNavigation:
 <section id="services-563">
     <div class="cs-container">
         <picture class="cs-picture">
-            <source media="(max-width: 600px)" srcset="/images/yardwaste_1.png" />
-            <source media="(min-width: 601px)" srcset="/images/yardwaste_1.png" />
-            <img loading="lazy" decoding="async" src="/images/yardwaste_1.png" alt="yard waste removal service" width="630"
+            <source media="(max-width: 600px)" srcset="/images/deckrepair_1.png" />
+            <source media="(min-width: 601px)" srcset="/images/deckrepair_1.png" />
+            <img loading="lazy" decoding="async" src="/images/deckrepair_1.png" alt="deck repair service" width="630"
                 height="528" aria-hidden="true" />
         </picture>
         <div class="cs-content">
-            <span class="cs-topper">Yard Waste Made Easy</span>
+            <span class="cs-topper">Deck Repairs Made Easy</span>
             <br />
             <h3 class="cs-h3">
                 Professional
-                <span class="cs-color">Yard Waste Removal Services</span>
+                <span class="cs-color">Deck Repair Services</span>
             </h3>
             <p class="cs-text">
-                From seasonal cleanups to storm debris, we haul away all your unwanted yard waste
-                so you can enjoy a clean and tidy outdoor space.
+                From minor fixes to major overhauls, we ensure your deck is safe, sturdy, and ready
+                for years of enjoyment.
             </p>
             <ul class="cs-ul">
                 <li class="cs-li">
                     <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async"
                         src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Services/arrow-green.svg" alt="arrow"
                         width="16" height="18" />
-                    Branches, sticks, and brush piles
+                    Loose or broken boards
                 </li>
                 <li class="cs-li">
                     <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async"
                         src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Services/arrow-green.svg" alt="arrow"
                         width="16" height="18" />
-                    Grass clippings, leaves, and mulch
+                    Railing and stair repairs
                 </li>
                 <li class="cs-li">
                     <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async"
                         src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Services/arrow-green.svg" alt="arrow"
                         width="16" height="18" />
-                    Storm debris and seasonal cleanup
+                    Deck staining and sealing
                 </li>
             </ul>
-            <a href="/contact" class="cs-button-solid">Get a Yard Waste Quote</a>
+            <a href="/contact" class="cs-button-solid">Get a Deck Repair Quote</a>
         </div>
     </div>
 </section>
@@ -172,57 +172,52 @@ eleventyNavigation:
     <div class="cs-container">
         <div class="cs-content">
             <span class="cs-topper">FAQs</span>
-            <h2 class="cs-title">Yard Waste Removal FAQs</h2>
+            <h2 class="cs-title">Deck Repair FAQs</h2>
             <p class="cs-text">
-                Find answers to common questions about our yard waste hauling services.
-                For special requests or large projects, contact our team today.
+                Find answers to common questions about our deck repair services.
+                For complex issues or complete deck renovations, contact our team today.
             </p>
         </div>
         <div class="cs-flex-group">
             <ul class="cs-faq-group">
                 <li class="cs-faq-item active">
-                    <button class="cs-button">
-                        What types of yard waste do you remove?
-                    </button>
+                    <button class="cs-button">What types of deck repairs do you handle?</button>
                     <p class="cs-item-p">
-                        We haul branches, brush, leaves, grass clippings, mulch, and more.
+                        We repair boards, railings, stairs, supports, and more.
                     </p>
                 </li>
                 <li class="cs-faq-item">
-                    <button class="cs-button">Do you recycle yard waste?</button>
+                    <button class="cs-button">Do you offer deck inspections?</button>
                     <p class="cs-item-p">
-                        Yes. Whenever possible, we recycle or compost yard debris to reduce landfill use.
+                        Yes, we provide free inspections to identify issues and offer solutions.
                     </p>
                 </li>
                 <li class="cs-faq-item">
-                    <button class="cs-button">
-                        How quickly can you pick up my yard waste?
-                    </button>
+                    <button class="cs-button">Can you match my deck’s existing style?</button>
                     <p class="cs-item-p">
-                        We offer same-day and next-day yard waste removal across Michigan.
+                        Absolutely. We use materials and finishes that complement your current deck design.
                     </p>
                 </li>
                 <li class="cs-faq-item">
-                    <button class="cs-button">Do I need to bag my yard waste?</button>
+                    <button class="cs-button">How long does a typical repair take?</button>
                     <p class="cs-item-p">
-                        No, but if bagged, it makes removal even faster. Our crew will collect loose piles as well.
+                        Most repairs are completed within a day, depending on the extent of damage.
                     </p>
                 </li>
                 <li class="cs-faq-item">
-                    <button class="cs-button">How much does yard waste removal cost?</button>
+                    <button class="cs-button">Do you also offer full deck replacements?</button>
                     <p class="cs-item-p">
-                        Pricing depends on the volume of yard debris, but
-                        we guarantee affordable, transparent rates.
+                        Yes, if your deck is beyond repair, we can build a new, durable deck to suit your needs.
                     </p>
                 </li>
             </ul>
             <div class="cs-cta">
-                <h3 class="cs-h3">Ready to Clear Out Yard Waste?</h3>
+                <h3 class="cs-h3">Ready to Restore Your Deck?</h3>
                 <p class="cs-cta-p">
-                    Junk Force Michigan provides fast, affordable, and eco-friendly
-                    yard waste removal services you can rely on.
+                    Michigan Fencing Solutions delivers expert deck repair services to keep your outdoor space safe and
+                    beautiful.
                 </p>
-                <a href="/contact" class="cs-button-solid">Schedule Yard Waste Pickup</a>
+                <a href="/contact" class="cs-button-solid">Schedule Deck Repair</a>
             </div>
         </div>
     </div>
