--- a/src/pages/servicepages/wood-privacy-fences.html
+++ b/src/pages/servicepages/wood-privacy-fences.html
@@ -1,16 +1,16 @@
 ---
 layout: "base.html"
-description: "Fast and Affordable Appliance Disposal Services in Michigan"
-metaTitle: "Junk Force Michigan | Appliance Disposal"
-tagTitle: "Appliance Disposal Service"
-title: "Appliance Disposal Service"
-preloadImg: "/images/appliance_banner.png"
+description: "Durable and Custom Wood Privacy Fence Installation in Kalamazoo, MI"
+metaTitle: "Michigan Fencing Solutions | Wood Privacy Fences"
+tagTitle: "Wood Privacy Fence Installation"
+title: "Wood Privacy Fences"
+preloadImg: "/images/wood_fence_banner.png"
 preloadCSS: "/css/services.css"
-permalink: "/appliance-disposal/"
+permalink: "/wood-privacy-fences/"
 eleventyNavigation:
-  key: Appliance Disposal
-  parent: Services
-  order: 100
+key: Wood Privacy Fences
+parent: Services
+order: 100
 ---
 
 <!-- ============================================ -->
@@ -18,12 +18,12 @@ eleventyNavigation:
 <!-- ============================================ -->
 
 <section id="int-hero">
-    <h1 id="home-h">Appliance Disposal Services</h1>
+    <h1 id="home-h">Wood Privacy Fence Installation</h1>
     <picture class="cs-background">
-        <source media="(max-width: 600px)" srcset="/images/appliance_banner.png" />
-        <source media="(min-width: 601px)" srcset="/images/appliance_banner.png" />
-        <img decoding="async" src="/images/appliance_banner.png" alt="appliance disposal service banner"
-            width="1280" height="568" aria-hidden="true" />
+        <source media="(max-width: 600px)" srcset="/images/wood_fence_banner.png" />
+        <source media="(min-width: 601px)" srcset="/images/wood_fence_banner.png" />
+        <img decoding="async" src="/images/wood_fence_banner.png" alt="wood privacy fence banner" width="1280"
+            height="568" aria-hidden="true" />
     </picture>
 </section>
 
@@ -36,16 +36,16 @@ eleventyNavigation:
         <div class="cs-image-group">
             <div class="cs-flex">
                 <picture class="cs-background">
-                    <source media="(max-width: 600px)" srcset="/images/appliance_0.png" />
-                    <source media="(min-width: 601px)" srcset="/images/appliance_0.png" />
-                    <img loading="lazy" decoding="async" src="/images/appliance_0.png" alt="old appliances removal"
+                    <source media="(max-width: 600px)" srcset="/images/wood_fence_0.png" />
+                    <source media="(min-width: 601px)" srcset="/images/wood_fence_0.png" />
+                    <img loading="lazy" decoding="async" src="/images/wood_fence_0.png" alt="custom wood privacy fence"
                         width="542" height="728" />
                 </picture>
                 <div class="cs-box">
                     <img class="cs-box-icon" loading="lazy" decoding="async"
-                        src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/gear-white.svg" alt="icon"
-                        width="60" height="60" />
-                    <span class="cs-desc">Eco-Friendly Appliance Disposal</span>
+                        src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/gear-white.svg" alt="icon" width="60"
+                        height="60" />
+                    <span class="cs-desc">High-Quality Wood Fencing</span>
                 </div>
             </div>
             <ul class="cs-card-group">
@@ -54,11 +54,11 @@ eleventyNavigation:
                         <img class="cs-h3-icon" aria-hidden="true" loading="lazy" decoding="async"
                             src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/circle-check.svg" alt="icon"
                             width="32" height="32" />
-                        Refrigerator & Freezer Removal
+                        Custom-Built Privacy
                     </h3>
                     <p class="cs-item-text">
-                        Safely dispose of heavy, bulky refrigerators and freezers with
-                        our expert hauling team.
+                        Our wood fences are tailored to your property, offering
+                        a natural look while ensuring maximum privacy and security.
                     </p>
                 </li>
                 <li class="cs-item">
@@ -66,11 +66,11 @@ eleventyNavigation:
                         <img class="cs-h3-icon" aria-hidden="true" loading="lazy" decoding="async"
                             src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/circle-check.svg" alt="icon"
                             width="32" height="32" />
-                        Washer & Dryer Disposal
+                        Durable Materials
                     </h3>
                     <p class="cs-item-text">
-                        We handle the heavy lifting for washing machines and dryers, ensuring
-                        safe and eco-friendly disposal.
+                        We use high-quality wood that withstands Michigan’s weather,
+                        delivering long-lasting beauty and strength.
                     </p>
                 </li>
             </ul>
@@ -79,39 +79,39 @@ eleventyNavigation:
             <hr />
             <br /><br />
             <h1 class="cs-title">
-                Appliance Disposal by
-                <span class="cs-color">Junk Force Michigan</span>
+                Wood Privacy Fences by
+                <span class="cs-color">Michigan Fencing Solutions</span>
             </h1>
             <br />
-            <h3>Safe, Reliable, and Eco-Friendly Appliance Removal</h3>
+            <h3>Enhance Your Property’s Security and Curb Appeal</h3>
             <br />
             <p>
-                At Junk Force Michigan, we specialize in removing and responsibly disposing
-                of old appliances that are too big or too heavy to handle on your own.
-                Whether you need to clear out a single refrigerator or multiple units,
-                we’ve got you covered.
+                At Michigan Fencing Solutions, we specialize in designing and installing
+                premium wood privacy fences that elevate your outdoor space. Whether you
+                want to secure your backyard, create a safe play area, or add rustic charm,
+                our team delivers craftsmanship you can trust.
             </p>
             <p>
-                As a family-owned business, we pride ourselves on same-day service, affordable
-                rates, and eco-friendly practices that keep Michigan clean.
+                As a locally owned business, we take pride in our reliable service,
+                professional installations, and dedication to using only the best materials.
             </p>
             <br />
             <hr />
             <br />
             <div class="desktop-only">
-                <h3>Our Appliance Disposal Process</h3>
+                <h3>Our Wood Fence Installation Process</h3>
                 <ol>
-                    <li>Schedule a convenient pick-up time</li>
-                    <li>Our crew handles the heavy lifting</li>
-                    <li>We recycle or dispose of appliances responsibly</li>
-                    <li>Final clean-up and customer approval</li>
+                    <li>Consultation and design planning</li>
+                    <li>Selection of premium wood materials</li>
+                    <li>Expert installation with attention to detail</li>
+                    <li>Final inspection and customer satisfaction check</li>
                 </ol>
-                <h4>Why Choose Junk Force Michigan?</h4>
+                <h4>Why Choose Michigan Fencing Solutions?</h4>
                 <ul>
-                    <li>Same-day appliance removal available</li>
-                    <li>Affordable, transparent pricing</li>
-                    <li>Eco-friendly disposal & recycling</li>
-                    <li>Family-owned and community-focused</li>
+                    <li>Custom-built designs to match your property</li>
+                    <li>High-quality, weather-resistant materials</li>
+                    <li>Experienced and professional installation team</li>
+                    <li>Locally owned and community-focused</li>
                 </ul>
             </div>
         </div>
@@ -126,43 +126,43 @@ eleventyNavigation:
 <section id="services-563">
     <div class="cs-container">
         <picture class="cs-picture">
-            <source media="(max-width: 600px)" srcset="/images/appliance_1.png" />
-            <source media="(min-width: 601px)" srcset="/images/appliance_1.png" />
-            <img loading="lazy" decoding="async" src="/images/appliance_1.png" alt="appliance disposal service" width="630"
-                height="528" aria-hidden="true" />
+            <source media="(max-width: 600px)" srcset="/images/wood_fence_1.png" />
+            <source media="(min-width: 601px)" srcset="/images/wood_fence_1.png" />
+            <img loading="lazy" decoding="async" src="/images/wood_fence_1.png" alt="wood privacy fence installation"
+                width="630" height="528" aria-hidden="true" />
         </picture>
         <div class="cs-content">
-            <span class="cs-topper">Appliance Removal Made Easy</span>
+            <span class="cs-topper">Fencing Done Right</span>
             <br />
             <h3 class="cs-h3">
                 Professional
-                <span class="cs-color">Appliance Disposal Services</span>
+                <span class="cs-color">Wood Privacy Fence Installation</span>
             </h3>
             <p class="cs-text">
-                From old stoves and dishwashers to microwaves and air conditioners,
-                we remove appliances of all shapes and sizes.
+                From backyard enclosures to full perimeter fencing, our wood privacy
+                fences are built to provide beauty, security, and lasting value.
             </p>
             <ul class="cs-ul">
                 <li class="cs-li">
                     <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async"
                         src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Services/arrow-green.svg" alt="arrow"
                         width="16" height="18" />
-                    Refrigerators, freezers, washers, dryers
+                    Custom designs to fit your property
                 </li>
                 <li class="cs-li">
                     <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async"
                         src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Services/arrow-green.svg" alt="arrow"
                         width="16" height="18" />
-                    Dishwashers, ovens, and stoves
+                    Strong, weather-resistant wood options
                 </li>
                 <li class="cs-li">
                     <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async"
                         src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Services/arrow-green.svg" alt="arrow"
                         width="16" height="18" />
-                    Microwaves, AC units, and more
+                    Professional installation and cleanup
                 </li>
             </ul>
-            <a href="/contact" class="cs-button-solid">Get an Appliance Disposal Quote</a>
+            <a href="/contact" class="cs-button-solid">Get a Wood Fence Quote</a>
         </div>
     </div>
 </section>
@@ -175,63 +175,63 @@ eleventyNavigation:
     <div class="cs-container">
         <div class="cs-content">
             <span class="cs-topper">FAQs</span>
-            <h2 class="cs-title">Appliance Disposal FAQs</h2>
+            <h2 class="cs-title">Wood Privacy Fence FAQs</h2>
             <p class="cs-text">
-                Get quick answers about our appliance removal services. For custom
-                hauling or large-scale cleanouts, contact our friendly team today.
+                Get answers about our wood privacy fence installation services.
+                For custom designs and expert advice, contact our friendly team today.
             </p>
         </div>
         <div class="cs-flex-group">
             <ul class="cs-faq-group">
                 <li class="cs-faq-item active">
                     <button class="cs-button">
-                        What types of appliances do you remove?
+                        What types of wood do you use?
                     </button>
                     <p class="cs-item-p">
-                        We haul refrigerators, freezers, ovens, washers, dryers,
-                        dishwashers, microwaves, and more.
+                        We use high-quality cedar, pine, and treated lumber for durability
+                        and long-lasting appeal.
                     </p>
                 </li>
                 <li class="cs-faq-item">
-                    <button class="cs-button">Do you recycle old appliances?</button>
+                    <button class="cs-button">How long does installation take?</button>
                     <p class="cs-item-p">
-                        Yes. Whenever possible, we recycle or donate appliances to
-                        reduce landfill waste and help the community.
+                        Most installations are completed in 1-3 days, depending on the size
+                        and complexity of your project.
                     </p>
                 </li>
                 <li class="cs-faq-item">
                     <button class="cs-button">
-                        How soon can you pick up my appliances?
+                        Do you offer custom fence designs?
                     </button>
                     <p class="cs-item-p">
-                        We offer same-day and next-day appliance removal services
-                        across Michigan.
+                        Yes, we tailor each wood fence to your property’s style,
+                        dimensions, and privacy needs.
                     </p>
                 </li>
                 <li class="cs-faq-item">
                     <button class="cs-button">
-                        Do I need to move the appliances outside?
+                        Will my fence withstand Michigan weather?
                     </button>
                     <p class="cs-item-p">
-                        No. Our team handles all the heavy lifting and safe removal
-                        directly from your home or business.
+                        Absolutely. We use treated, weather-resistant wood and proven
+                        installation methods for long-term durability.
                     </p>
                 </li>
                 <li class="cs-faq-item">
-                    <button class="cs-button">How much does appliance disposal cost?</button>
+                    <button class="cs-button">How much does a wood privacy fence cost?</button>
                     <p class="cs-item-p">
-                        Pricing depends on the type and number of appliances, but
-                        we guarantee affordable, transparent rates.
+                        Pricing depends on size, design, and materials, but we provide
+                        free estimates with transparent, competitive rates.
                     </p>
                 </li>
             </ul>
             <div class="cs-cta">
-                <h3 class="cs-h3">Ready to Get Rid of Old Appliances?</h3>
+                <h3 class="cs-h3">Ready to Add a Beautiful Wood Fence?</h3>
                 <p class="cs-cta-p">
-                    Junk Force Michigan provides fast, affordable, and eco-friendly
-                    appliance disposal services you can rely on.
+                    Michigan Fencing Solutions provides expert wood privacy fence
+                    installation to enhance your property’s value and appeal.
                 </p>
-                <a href="/contact" class="cs-button-solid">Schedule Appliance Removal</a>
+                <a href="/contact" class="cs-button-solid">Request a Free Estimate</a>
             </div>
         </div>
     </div>
